test/parsing/precedence/bang-vs-cast2.good
bang-vs-cast2.chpl:13: error: unresolved call 'postfix!(type borrowed C?)'
